<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_padding">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_success"
        android:textSize="@dimen/lg_font"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lg_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_code"
            android:textSize="@dimen/base_font"/>

        <TextView
            android:id="@+id/detail_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_font"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/base_font"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_name"
            android:textSize="@dimen/base_font"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_font"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/base_font"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_position"
            android:textSize="@dimen/base_font"/>

        <TextView
            android:id="@+id/detail_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_font"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/base_font"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_company"
            android:textSize="@dimen/base_font"/>

        <TextView
            android:id="@+id/detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_font"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/base_font"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/themeGreen"
        android:layout_marginTop="@dimen/lg_padding"
        android:padding="@dimen/base_padding"
        android:text="@string/btn_close"
        android:textSize="@dimen/base_font"
        android:textColor="@android:color/white"/>
</LinearLayout>